# libraryManagementSystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md
api-server/: original_server.js  server.js  server_modified.js
docs/: README_zh-CN.md
header/: database.h  localization.h  logger.h
src/: database.cpp  main.cpp  validation.cpp
webui/src/api/: index.ts
webui/src/assets/styles/: global.css
webui/src/plugins/: i18n.ts
webui/src/router/: index.ts
webui/src/store/: user.ts
webui/src/types/: index.ts
webui/src/views/: AccountManagement.vue  EnhancedLogin.vue  ForgotPassword.vue  GlassLogin.vue  Login.vue  Register.vue  SearchBooks.vue
webui/src/views/admin/: AdminDashboard.vue  AdminLayout.vue  BorrowManagement.vue  GlassAdminDashboard.vue  LogsManagement.vue  ModernAdminDashboard.vue  UserManagement.vue
webui/src/views/student/: StudentBorrowings.vue  StudentDashboard.vue  StudentLayout.vue
